# ayuda

common/: CMakeLists.txt  binaryo.cpp  binaryo.hpp  decompress.cpp  decompress.hpp  info.cpp  info.hpp  progargs.cpp  progargs.hpp
imgaos/: CMakeLists.txt  imgaos.cpp  imgaos.hpp
imgsoa/: CMakeLists.txt  imgsoa.cpp  imgsoa.hpp
imtool-aos/: main.cpp
imtool-soa/: CMakeLists.txt  main.cpp
utest-common/: CMakeLists.txt
utest-imgaos/: CMakeLists.txt  test_imgaos.cpp
utest-imgsoa/: CMakeLists.txt
